updates & addition of makefile

--- a/2.2_0_monte_carlo_outputs.tex
+++ b/2.2_0_monte_carlo_outputs.tex
@@ -17,12 +17,11 @@ around from the apoapsis for the first time and it corresponds to $TSC_1$.
 We describe how we use to break the degeneracies of the two scenarios in
 section \ref{sec: positionprior}. 
  
-\textbf{Other outputs from the simulation include estimates of the
-output PDFs that characterize the dynamics of the merger. 
-} The 3D velocities, both at the time of the collision
-($v_{3D}(t_{col})$) and at the time of observation ($v_{3D}(t_{obs})$) are
-provided. The maximum 3D separation ($d_{max}$) which is defined to be the
-distance between the position of collision to the apoapsis is also part of
+\textbf{The simulation also output estimates of variables that characterize
+the dynamics of the merger.} The 3D velocities, both at the time of the
+collision ($v_{3D}(t_{col})$) and at the time of observation
+($v_{3D}(t_{obs})$) are provided. The maximum 3D separation ($d_{max}$)
+which is defined to be the distance between the position of collision to the apoapsis is also part of
 the outputs. (See the lower half of Table \ref{tab:outputs} for all the outputs).
 %Here we present results based on:\\  %1) a flat radio prior\\
 %2) a uniform prior over a range of most likely 3D separations\\
