--- a/2.3_prior.tex
+++ b/2.3_prior.tex
@@ -1,4 +1,4 @@
-The strength of the Monte Carlo simulation by \citep(D13) is its ability
+The strength of the Monte Carlo simulation by \citetalias{D13} is its ability
 to detect and rule out extreme input values that would result in
 unphysical realizations. 
 Our default Monte Carlo filters are described in D13 and they are applied to ensure 
