--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -250,11 +250,11 @@ add more description about contours) }
 \subsection{Time-since-collision}  
 \input{3.2_TSC}
 
-%\begin{figure} 
-%	\includegraphics[width =\linewidth]{r_relic_4300.png}
-%	\caption{Posterior PDF of likely location of relic based on the
-%    outgoing and incoming scenario.}
-%\end{figure}
+\begin{figure} 
+	\includegraphics[width =\linewidth]{r_relic_4300.png}
+	\caption{Posterior PDF of likely location of relic based on the
+    outgoing and incoming scenario.}
+\end{figure}
 %-----------------------------------------------------------------------
 %\subsection{Galaxy centroid from spectroscopic data} The galaxy
 %distribution is bimodal (M12).
@@ -274,6 +274,8 @@ add more description about contours) }
 \input{4.3_comparison_merger}
 
 \subsection{Uncertainties of the radio relic prior}
+\input{4.4_uncertainties_radio_prior}
+
 \subsection{Limitations of our model and future work} 
 \input{4.5_limitations}
 
@@ -287,7 +289,7 @@ relic emission to constrain merger dynamics and configurations, many
 improvements can still be made as more studies of radio relic are being
 done from both cosmological simulations and observations.
 
-Currently, there are only a few studies of the
+Currently, there are only a few studies of
  radio relic available for a range of viewing angles (\citealt{S13}, one of
 Bruggen's paper). As more cosmological simulations inform us  
 if the relic is observable at certain viewing angles will help us 
