--- a/4.5_limitations.tex
+++ b/4.5_limitations.tex
@@ -1,3 +1,3 @@
 Impact parameter of El Gordo may not be negligible. 
-Simulations from Ricker \& Sarazin (2001) showed that cool-core is not disrupted 
-when the impact parameters of mergers are of $\sim 500$ kpc.   
+Simulations from Ricker \& Sarazin (2001) showed that cool-core is not
+disrupted  when the impact parameters of mergers are of the order of $\sim 500$ kpc.   
