--- a/1_intro.tex
+++ b/1_intro.tex
@@ -131,7 +131,7 @@ and identify different stages of similar dissociative mergers. \par
 
 \textbf{Another crucial piece of missing information is the 3D
 configuration, i.e. the projection angle $\alpha$, which contributes the
-largest amount of uncertainties to the dynamical variables (\citep{D13}).}
+largest amount of uncertainties to the dynamical variables \citep{D13}.}
 With a large projection angle $\alpha$, the radio emission may appear as a
 radio halo instead.  \citep{S13}\par 
 %\textbf{motivation2}
