--- a/2.3_prior.tex
+++ b/2.3_prior.tex
@@ -24,7 +24,8 @@ radio relic after removing effects of radio point sources.
 %\end{itemize}
 
 Radio relics have been suggested to be able to constrain the
-mass ratios, the projection and the merger configuration. (Cite one of Reinout's paper) 
+mass ratios, the projection and the merger configuration.
+\citep{vanWeeren10} 
 Ever since the first detection of radio relic,cosmological hydrodynamical simulations of
 merging clusters have been used to model their emission spectrum and
 geometry. (Vazza et al. 2011, van Weeren and Bruggen 2011 et al., Bonafede
