--- a/3.1_merger_speed.tex
+++ b/3.1_merger_speed.tex
@@ -1,5 +1,6 @@
-\textbf{The relative merger speed of the two subclusters is estimated to be 3400~\kilo\meter~\second$^{-1}$
-at the time of collision.} The two subclusters are estimated to slow down
-to a 3D relative velocity of only $\sim800$ \kilo\meter~\second$^{-1}$ 
-at the time of observation. Based on this evolution of the $v_{3D}$, it is
-unlikely that El Gordo is a slow merger. 
+\textbf{The relative merger speed of the two subclusters is estimated to be
+3400~\kilo\meter~\second$^{-1}$ at the time of collision.} The two
+subclusters are estimated to slow down to a 3D relative velocity of only
+$\sim800$ \kilo\meter~\second$^{-1}$  at the time of observation. Based on
+this time evolution of the $v_{3D}$, it is unlikely that El Gordo is a slow
+merger as mentioned in \citet{M11}. 
