--- a/3.2_TSC.tex
+++ b/3.2_TSC.tex
@@ -10,8 +10,9 @@ likely position based on the two inferred TSC.
 
 In this calculation, the dominant uncertainty comes from the
 reported location of the radio relic, since the radio relic has non-negligible
-physical dimensions. After taking into this uncertainty, the possible locations of the
-relic still favors the outgoing scenario. 
+physical dimensions.  After taking into this uncertainty, the possible
+locations of the relic still favors the outgoing scenario. (See figure
+\ref{fig: positionprior}) 
 
 %Base on the time evolution of radio relic, we speculate that El Gordo has already reached its apoapsis and the two subclusters are heading for another merger.
 %%This degeneracy between $TSC_0$ and $TSC_1$ that
