--- a/4.2_other_studies.tex
+++ b/4.2_other_studies.tex
@@ -1,4 +1,4 @@
-Compare to Lindner et al."
+Compare to Lindner et al.
 %See Menanteau 2012 v1 last section to incorporate discussion of sound
 %crossing time of $\sim $ 1~Gyr. 
 
