--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -251,6 +251,7 @@ add more description about contours) }
 \input{3.2_TSC}
 
 \begin{figure} 
+	\label{fig: positionprior}
 	\includegraphics[width =\linewidth]{r_relic_4300.png}
 	\caption{Posterior PDF of likely location of relic based on the
     outgoing and incoming scenario.}
