--- a/2.1_2_WL.tex
+++ b/2.1_2_WL.tex
@@ -20,7 +20,7 @@ samples of the PDFs of the masses. \par
 %which is similar to \citepalias{Jee13}, however, this
 %separate implementation of the MCMC analysis code is different than
 %\citepalias{Jee13}.} 
-We used an identical catalog of reduced and biased corrected background 
+We used an identical catalog of reduced and bias-corrected background 
 galaxy shapes as in Hubble Space Telescope PROP 12755 from \citetalias{Jee13}. On the other hand, we fixed the
 position of the centers of the NFW halos to be  the luminosity peaks of the
 respective galaxy populations of  the two subclusters, which are at R.A. = 01:02:51.68, Decl. = -49:15:04.40 and R.A. = 01:02:38.38, Decl. = -49:16:37.64 for the NW and SE subclusters
