--- a/2.2_0_monte_carlo_outputs.tex
+++ b/2.2_0_monte_carlo_outputs.tex
@@ -12,7 +12,7 @@ elapsed between the collision and when the subclusters first reach apoapsis
 $TSC_1$ denotes different possible merger scenarios.} 1) We call the scenario for which the subclusters are
 moving apart after collision to be ``outgoing" and it corresponds to the
 smaller $TSC_0$ value, and 2) we call the alternative scenario 
-incoming for which the subclusters are approaching each other after turning
+``incoming" for which the subclusters are approaching each other after turning
 around from the apoapsis for the first time and it corresponds to $TSC_1$.
 We describe how we use to break the degeneracies of the two scenarios in
 section \ref{sec: positionprior}. 
