--- a/2.3_1_polarization_prior.tex
+++ b/2.3_1_polarization_prior.tex
@@ -5,9 +5,9 @@ magnetic field. (Synchrotron emission from unorganized magnetic field are
 randomly polarized) We refer to a model from \citet{E98} with
 the following physical picture: during a merger, the intracluster medium is compressed, this aligns the unordered
 magnetic field perpendicular to the line joining the cluster center to the
-radio relic. (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12})  Thus, the synchrotron
-emission emitted from the electrons near this aligned magnetic field is
-strongly polarized perpendicular to this magnetic field. \par
+radio relic. (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12})
+Thus, the synchrotron emission emitted from the electrons near this aligned
+magnetic field is strongly polarized perpendicular to this magnetic field. \par
 \textbf{The major assumption behind the design of our filter
 is that the integrated polarization fraction is a monotonically
 decreasing function of $\alpha$.} 
