--- a/2.3_prior.tex
+++ b/2.3_prior.tex
@@ -9,15 +9,15 @@ fraction of the radio relic of El Gordo respectively.
 %(See Appendix \ref{tab:priors} for a complete list of filters used in this paper.) 
 
 \textbf{El Gordo shows remarkable double radio relics on the periphery
-(M11)} The radio relic  of El Gordo was first mentioned in the Sydney University
+(M11).} The radio relic  of El Gordo was first mentioned in the Sydney University
 Molonglo Sky Survey (SUMSS) data in low resolution at 843 MHz
-\cite{Mauch03} as shown in
+\citep{Mauch03} as shown in
 M11. The higher resolution radio observation conducted by \cite{L13} at 610
 \mega Hz and 2.1 \giga Hz confirms that those radio emission correspond to
 radio relic after removing effects of radio point sources.
 %\begin{itemize}
 %\item talks about the observable, which is the comoving kinetic power through each shock surface
-%\item refer to diffussive shock acceleration (DSA) mechanism?
+%\item refer to diffusive shock acceleration (DSA) mechanism?
 %\item Kang \& Jones treatment of Mach number-dependent efficiency
 %considering the possibility of having an non-isotropic magnetic field  
 %$KJ_BparallelRadial$ model
@@ -26,12 +26,12 @@ radio relic after removing effects of radio point sources.
 Radio relics have been suggested to be able to constrain the
 mass ratios, the projection and the merger configuration.
 \citep{vanWeeren10} 
-Ever since the first detection of radio relic,cosmological hydrodynamical simulations of
+Ever since the first detection of radio relic, cosmological hydrodynamical simulations of
 merging clusters have been used to model their emission spectrum and
-geometry. (Vazza et al. 2011, van Weeren and Bruggen 2011 et al., Bonafede
-et al. 2013, En{\ss}lin et al. 1997, Br\"{u}ggen et al.,  Skillman et al.
+geometry. (\citealt{Vazza11}, \citealt{VanWeerenRJ2011}, Bonafede
+et al. 2013, \citealt{E98}, Br\"{u}ggen et al., Skillman et al.
 2013) While such cosmological simulations have provided valuable insights
-to verifying the physical models, they are expensive both in terms of
+to verifying the physical models, they are expensive in terms of
 computational power and novel techniques have to be invented in order to
 analyze the large amount of simulated data so progress has been slow. 
 Our Monte Carlo simulation can make use of known physics combined with the
