--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -193,38 +193,6 @@ luminosity peaks.
 %\end{table*} 
 
 %----------------------------------------------------------------------
-%\section{Sensitivity analysis}
-%\subsection{Effects of prior on output estimates}
-%\textbf{The application of uniform radio relic prior truncates the long
-%tail of 3D separation PDF, leading to a notable reduction in the
-%uncertainties of the estimates some of the output variables (See Figure
-%\ref{fig:radioprior})}. The variables that are affected the most by the
-%prior show simple relationship with the $d_{3D}$. 
-%(For details see Appendix \ref{app:results}).
-%The variables that benefit the most from reduced uncertainties include
-%$TSC_0$ and $\alpha$. The 68\% credible interval of $TSC_0$ and $\alpha$ are
-%reduced by $X \%$ and $X \%$ respectively. The uncertainties of other
-%variables are also reduced but not as notable.The variables with mild
-%uncertainty reduction include $v_{3D}(t_{obs})$ and $v_{3D}(t_{col})$, and
-%they show more complicated bimodal marginalized output probability. 
-%(See Figure \ref{fig:TSC_v3D})\par
-%\textbf{On the other hand, the estimated locations of the output variables
-%are only mildly affected by the application of the uniform prior.} The
-%variable X shows most discrepant estimated location with the application
-%of the radio prior, but only up to X\% and the estimated value after
-%applying the prior is well within the 68\%
-%credible interval. This shows that our choice of prior has not
-%introduced serious bias in our results. (See Table \ref{tab:predictiveposteriorchecking}) 
-%
-%\subsection{Effects of prior on the likelihood}
-%We compare the change to the likelihood as predicted by the simulation.
-%(See columns across table \ref{})
-
-%The differences between subsequent application of our proposed priors are
-%negligible. 
-%%The application of prior also 
-
-%-----------------------------------------------------------------------
 
 \section{RESULTS} 
 \begin{figure} 
@@ -312,17 +280,16 @@ of the merger scenario.
 %\begin{thebibliography}{}
 \bibliography{bib}
 
-\section{RESULT PLOTS OF MONTE CARLO SIMULATION} 
-\label{app: plots}
-\input{app_d_MCMAC_result_plots}
-
 \appendix
-\section{Bayesian formalism of Dawson's Monte Carlo simulation}
+
+\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
 \input{app_a_MCMAC_stat_formalism}
 
-\section{Details and tests for the MCMC mass inference}\label{app:MCMC}
+\section{DETAILS AND TESTS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
 \input{app_b_MCMC}
 
+\section{RESULT PLOTS OF MONTE CARLO SIMULATION} \label{app: plots}
+\input{app_c_result_plots}
 \bsp 
 \label{lastpage} 
 \end{document}
