--- a/app_c_result_plots.tex
+++ b/app_c_result_plots.tex
@@ -1,1 +1,1 @@
-We present the detailed results of the Monte Carlo simulation:
+%make use of subplots from matplotlib in order to plot all the posteriors
