--- a/3.2_TSC.tex
+++ b/3.2_TSC.tex
@@ -10,7 +10,7 @@ likely position based on the two inferred TSC.
 
 In this calculation, the dominant uncertainty comes from the
 reported location of the radio relic, since the radio relic has non-negligible
-physical dimensions.  After taking into this uncertainty, the possible
+physical dimensions of $\sim \kilo pc$.  After taking into this uncertainty, the possible
 locations of the relic still favors the outgoing scenario. (See figure
 \ref{fig: positionprior}) 
 
