--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -193,7 +193,6 @@ luminosity peaks.
 %\end{table*} 
 
 %----------------------------------------------------------------------
-
 \section{RESULTS} 
 \begin{figure} 
 	\includegraphics[width =\linewidth]{elGordoTSCwithBullet_revC.png}
@@ -222,7 +221,8 @@ add more description about contours) }
 	\label{fig: positionprior}
 	\includegraphics[width =\linewidth]{r_relic_4300.png}
 	\caption{Posterior PDF of likely location of relic based on the
-    outgoing and incoming scenario.}
+    outgoing and incoming scenario. Explain the colors and what the
+errorbars are}
 \end{figure}
 %-----------------------------------------------------------------------
 %\subsection{Galaxy centroid from spectroscopic data} The galaxy
