--- a/1_intro.tex
+++ b/1_intro.tex
@@ -29,6 +29,8 @@ matter and the other components may suggest dark matter self-interaction
 %\textbf{background of El Gordo}
 %\textbf{What literature exists for El Gordo.}
 
+van Weeren 2011a suggests that the double radio relic can provide clue to
+collisional parameters ???
 \textbf{Ever since the discovery of El Gordo in the Atacama Camera Telescope (ACT)
 survey (REF), there is an ongoing effort for collecting comprehensive data
 for El Gordo.} From the spectroscopy and Dressler-Schecter test for the member galaxies  in Sif\'{o}n et al. (2013), El Gordo is confirmed to be a binary merger 
