--- a/2.2_0_monte_carlo_outputs.tex
+++ b/2.2_0_monte_carlo_outputs.tex
@@ -1,8 +1,8 @@
 We summarize the output of the simulation here and leave detailed
-plots and descriptions in Appendix \ref{app: plots}. The simulation provides PDF estimates of the many output variables. Variables
-of the most interest include $\alpha$, which is defined to be the projection
-angle between the plane of the sky and the merger axis, and the time
-dependence. Other output variables are dependent on $\alpha$ and the time
+plots and descriptions in Appendix \ref{app: plots}. The simulation
+provides PDF estimates for many of the output variables. Variables
+of the most interest include the time dependence and $\alpha$, which is
+defined to be the projection angle between the plane of the sky and the merger axis. Other output variables are dependent on $\alpha$ and the time
 dependence. Specifically, the simulation denotes the time dependence by
 providing several characteristic time-scales, including the time
 elapsed between the collision and when the subclusters first reach apoapsis
