--- a/2.3_1_polarization_prior.tex
+++ b/2.3_1_polarization_prior.tex
@@ -1,5 +1,5 @@
-\textbf{In particular, \cite{L13} reports an integrated
-polarization fraction of $\sim33\%$ for the two identified relics.} The
+In particular, \cite{L13} reports an integrated
+polarization fraction of $\sim33\%$ for the two identified relics. The
 high integrated polarization fraction can be explained by uniformly aligned
 magnetic field. (Synchrotron emission from unorganized magnetic field are
 randomly polarized) We refer to a model from \citet{E98} with
@@ -15,10 +15,10 @@ This assumption is inspired by the class of models given by \cite{E98},
 which, despite various inputs for spectral indices and magnetic field strength, each predicts a monotonically decreasing integrated
 polarization fraction as a function of $\alpha$. 
 %This assumption is yet to be verified by cosmological simulations of radio relic. 
-\par 
-\textbf{In particular, we refer to a model from \cite{E98} that would give the most conservative estimate on the upper bound of $\alpha$.} 
+In particular, we refer to a model from \cite{E98} that would give the most
+conservative estimate on the upper bound of $\alpha$. 
 This model predicts a maximum integrated polarization fraction of
-$\sim$75\% when $\alpha = 0$ . From this model, the observed integrated
+$\sim75\%$ when $\alpha = 0$ . From this model, the observed integrated
 polarization fraction of 33\% corresponds to $\mu_\alpha =  39\degree$. 
 %We consider 39\degree as an upper bound on the projection angle since this idealized model assume isotropic distribution of magnetic field and
 %electrons. 
@@ -66,7 +66,9 @@ For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with int
 simulated polarization signal with a Gaussian kernel of 4\arcmin to match
 observable resolution, the polarization fraction drops to between 30\% to
 65\% even when $\alpha = 0$. 
-Other uncertainties come from the fact that the inferred spectral indices differ between the two observed frequencies and vary between the three identified relic sources \citep{L13}.\par 
+Other uncertainties come from the fact that the inferred spectral indices
+differ between the two observed frequencies and vary between the three
+identified relic sources \citep{L13}. 
 %\textbf{We pick a form of uniform prior, to represent
 %the uncertainties in both the modeling (\citealt{E98}, \citealt{S13}) and the interpretation of the data from \cite{L13}.} 
 Following previous discussion, we pick a value of $\mu_\alpha =39\degree +
