--- a/4.1_3D_config.tex
+++ b/4.1_3D_config.tex
@@ -23,11 +23,10 @@ the merger speed is low"\\
 2) the merger speed is high, but we are viewing after the first turn
 around as the two components come together for a second core passage
 \item discuss the inclination angle estimate from M11
+\item Dave: explain where the limits of the projection angle comes
+from. what observational evidence contradicts the low velocity
+scenario the most
 \end{itemize}
-\underline{Dave: explain where the limits of the projection angle comes
-from.} 
-\underline{what observational evidence contradicts the low velocity
-scenario the most} 
 
 \textbf{With this new piece of evidence, we find that the absence of an
 X-ray shock feature from El Gordo, may not be due to the merger speed being
