--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -165,7 +165,7 @@ luminosity peaks.
 %---------------------------------------------------------------------------
 \subsection{Extension to the Monte Carlo simulation - Determining merger scenario with radio relic position}
 \label{sec: positionprior}
-\input{2.4_extend_montecarlo}
+\input{2.4_positionprior}
 
 %\begin{table*} 
 %\begin{minipage}{180mm} 
@@ -221,9 +221,14 @@ add more description about contours) }
 	\label{fig: positionprior}
 	\includegraphics[width =\linewidth]{r_relic_4300.png}
 	\caption{Posterior PDF of likely location of relic based on the
-    outgoing and incoming scenario. Explain the colors and what the
-errorbars are}
+    outgoing and incoming scenario. (Explain the colors and what the
+	errorbars are.)}
 \end{figure}
+
+\subsection{Effects of applied prior on parameters}
+\input{3.3_sens_analysis}
+
+
 %-----------------------------------------------------------------------
 %\subsection{Galaxy centroid from spectroscopic data} The galaxy
 %distribution is bimodal (M12).
