--- a/3.2_TSC.tex
+++ b/3.2_TSC.tex
@@ -1,18 +1,18 @@
-
 \textbf{The simulation gives two plausible estimates for
 the time-since-collision, with $TSC_0 = \giga \text{yr}$ and $TSC_1 = \giga
 \text{yr}$}. The presence of the radio relic, in conjunction with a
 depression in the X-ray surface brightness shown in M11, strongly suggest
 that El Gordo is a post-collision system. 
-
 Based on \ref{sec: positionprior}, we have come up with an estimate for the
 likely position based on the two inferred TSC. 
 
 In this calculation, the dominant uncertainty comes from the
-reported location of the radio relic, since the radio relic has non-negligible
-physical dimensions of $\sim \kilo pc$.  After taking into this uncertainty, the possible
-locations of the relic still favors the outgoing scenario. (See figure
-\ref{fig: positionprior}) 
+reported location of the radio relic, 
+After taking into this uncertainty, the possible locations of the relic still favors the
+outgoing scenario. (See figure \ref{fig: positionprior}) Other
+uncertainties arise from how we define the reference frame for the calculation. The
+uncertainty associated with the two centroids are of the order
+of $\sim 0.1 \mega$pc \citep{Jee13} and are relatively unimportant???.  
 
 %Base on the time evolution of radio relic, we speculate that El Gordo has already reached its apoapsis and the two subclusters are heading for another merger.
 %%This degeneracy between $TSC_0$ and $TSC_1$ that
