--- a/2.0_montecarlo_framework.tex
+++ b/2.0_montecarlo_framework.tex
@@ -46,8 +46,8 @@ chain rule underlies the simulation is:
 \end{equation}
 where the likelihood is defined to be the PDF of $\vec{D}$ given $\vec{\theta}$,
 i.e. the input variables, not statistical parameters, and the priors are
-defined to be the probabilities due to prior believes of the values of
-$\vec{\theta}$. The output variables ($\vec{\theta}^\prime$), on the other
+defined to be the probabilities due to prior knowledge of the estimated values of
+$\vec{\theta}$. The output variables $\vec{\theta}^\prime$, on the other
 hand, were computed according to the conservation of energy, which is represented by a suitable
 function form $f$ below. For example,the calculation of the $j$-th realization: 
 \begin{equation}
