--- a/ElGordo1.tex
+++ b/ElGordo1.tex
@@ -1,52 +1,4 @@
-% mn2esample.tex
-%
-% v2.1 released 22nd May 2002 (G. Hutton)
-%
-% The mnsample.tex file has been amended to highlight the proper use of
-% LaTeX2e code with the class file and using natbib cross-referencing.
-% These changes do not reflect the original paper by A. V. Raveendran.
-%
-% Previous versions of this sample document were compatible with the LaTeX
-% 2.09 style file mn.sty v1.2 released 5th September 1994 (M. Reed) v1.1
-% released 18th July 1994 v1.0 released 28th January 1994
-
-\documentclass[letterpaper,useAMS,usenatbib]{"mn2e"}
-%\documentclass[letterpaper,useAMS]{"mn2e"}
-%LINUX version of the path
-%\documentclass[useAMS,usenatbib,letterpaper]{"/media/blank/Macintosh
-%HD/Users/karenyng/Library/texmf/tex/latex/commonstuff/mn2e"}
-
-% If your system does not have the AMS fonts version 2.0 installed, then
-% remove the useAMS option.
-%
-% useAMS allows you to obtain upright Greek characters.  e.g. \umu, \upi
-% etc.  See the section on "Upright Greek characters" in this guide for
-% further information.
-%
-% If you are using AMS 2.0 fonts, bold math letters/symbols are available
-% at a larger range of sizes for NFSS release 1 and 2 (using \boldmath or
-% preferably \bmath).
-%
-% The usenatbib command allows the use of Patrick Daly's natbib.sty for
-% cross-referencing.
-%
-% If you wish to typeset the paper in Times font (if you do not have the
-% PostScript Type 1 Computer Modern fonts you will need to do this to get
-% smoother fonts in a PDF file) then uncomment the next line 
-%\usepackage{Times}
-
-%%%%% AUTHORS - PLACE YOUR OWN MACROS HERE %%%%%
-\usepackage{hyperref}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage[amssymb]{SIunits} 
-\usepackage{booktabs}
-\usepackage{breqn}
-\usepackage{standalone}
-\graphicspath{{graphics/}}
-%-----------------------------------------------------------------------
-\input{bib_alias}
-
+\input{style}
 %-----------------------------------------------------------------------
 \title[El Gordo]{The dynamics and the merging scenario of the galaxy cluster 
 ACT-CL J0102-4915, 
@@ -164,6 +116,11 @@ luminosity peaks.
 
 %---------------------------------------------------------------------------
 \subsection{Extension to the Monte Carlo simulation - Determining merger scenario with radio relic position}
+%\begin{figure} 
+%	\includegraphics[width =\linewidth]{shock_evolution.pdf}
+%	\caption{The simplified view of time evolution of the speeds of the
+%	different cluster components during the collision. }
+%\end{figure}
 \label{sec: positionprior}
 \input{2.4_positionprior}
 
