added better reference to section 2.4

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -252,6 +252,9 @@ of the merger scenario.
 
 \section{RESULT PLOTS OF MONTE CARLO SIMULATION} \label{app: plots}
 \input{app_c_result_plots}
+\subsection{Plots for distinguishing the two merger scenarios}
+\label{app: merger_scenarios}
+
 \bsp 
 \label{lastpage} 
 \end{document}
