--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -1,7 +1,7 @@
 % this line is included when individual section needs to be compiled and
 % reviewed  
-\input{style}
-\begin{document}
+%\input{style}
+%\begin{document}
 
 \label{sec: positionprior}
 % draft: 
@@ -58,17 +58,19 @@ The key to the success of this method lies our ability in estimating the
 upper and lower bounds on the possible position of the relic. The
 uncertainty of the time evolution of the velocity of the shock stem from
 how the velocity depends on a number of physical quantities, including the
-local gravitational potential, matter density, temperature, pressure among others (\citealt{E98}, Shu .F. , more
-citations?).  The exact time evolution of the shock velocity requires
-detailed numerical simulation similar to  \citet{Springel2007},
-\citet{Vazza11}, \citet{Kang2007}, etc. 
+local gravitational potential, matter density, temperature, pressure among
+others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
+of the shock velocity requires detailed numerical simulation similar to
+\citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc. 
 We draw physical insight from the
-simulation of the merger shock of the Bullet cluster from
-\citet{Springel2007}, which shows
+simulations of the merger shock of the Bullet cluster from
+\citet{Springel2007} and \citet{Paul2011b}, which both show
 that, right after the collision of the subclusters, the shock speed is
-comparable to the merger speed of the two subclusters in the center of mass frame.  The shock speed mildly drops by only $\sim 14\%$
-in the 300~\mega yr period after the formation of the shock versus  
-a $\sim65\%$ drop for the main subcluster, which was slowed down by gravity. 
+comparable to the merger speed of the two subclusters in the center of mass
+frame.  While \citet{Paul2011b} reports the shock speed decreases only
+slightly as it propagates away from the center of mass, the Bullet shock
+speed mildly drops by only $\sim 14\%$ in the 300~\mega yr period after the
+formation of the Bullet shock versus a $\sim65\%$ drop for the main subcluster, which was slowed down by gravity. 
 
 We approximated the upper and lower bounds of the shock speed with the
 simulated speeds of the subclusters.  We simplified the calculation by
@@ -83,8 +85,7 @@ The lower bound is set to be the average speed of the subcluster since the
 relic is observed to have traveled further away than the NW subcluster from
 the center of mass. The upper bound can be approximated as the relative
 collision speed of the subclusters due to how the shock is powered by the
-collision. This is
-consistent with the fact that shock is a pressure wave
+collision. This is consistent with the fact that shock is a pressure wave
 and does not experience gravitational deceleration while some dissipative
 processes may have slowed down the shock wave. It is unlikely that there
 would be significant energy injected into the shock to speed up the shock .
@@ -93,9 +94,9 @@ would be significant energy injected into the shock to speed up the shock .
 \end{equation}
 where $s_{proj}$ is the bound projected separation. 
 We compare the bounds with the observed position of the NW relic from
-\citet{L13}. We plot the most extreme values from the realizations for the
-two possible scenario in Figure (X), while we leave detailed analysis in
-Appendix X.
+\citet{L13}. We summarized the most extreme values from all of the realizations
+for the two possible scenarios in Figure (X), while we leave detailed
+results in Appendix \ref{app: merger_scenarios}.
 
 %Observationally, studies from Lindner et al. also provide some
 %comparison of the estimated shock speed relative to the gas medium as $4300
@@ -146,8 +147,8 @@ Appendix X.
 %The greatest uncertainty remains in the modeling of the time evolution of
 %the speed of the shock wave.
 \par      
-
-\bibliographystyle{mn2e}
-\bibliography{bib}
-
-\end{document}
+%
+%\bibliographystyle{mn2e}
+%\bibliography{bib}
+%
+%\end{document}
