--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -1,7 +1,7 @@
 % this line is included when individual section needs to be compiled and
 % reviewed  
-%\input{style}
-%\begin{document}
+\input{style}
+\begin{document}
 
 \label{sec: positionprior}
 % draft: 
@@ -148,7 +148,7 @@ results in Appendix \ref{app: merger_scenarios}.
 %the speed of the shock wave.
 \par      
 %
-%\bibliographystyle{mn2e}
-%\bibliography{bib}
-%
-%\end{document}
+\bibliographystyle{mn2e}
+\bibliography{bib}
+
+\end{document}
