--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -174,13 +174,13 @@ add more description about contours) }
 \subsection{Time-since-collision}  
 \input{3.2_TSC}
 
-\begin{figure} 
-	\label{fig: positionprior}
-	\includegraphics[width =\linewidth]{r_relic_4300.png}
-	\caption{Posterior PDF of likely location of relic based on the
-    outgoing and incoming scenario. (Explain the colors and what the
-	errorbars are.)}
-\end{figure}
+%\begin{figure} 
+%	\label{fig: positionprior}
+%	\includegraphics[width =\linewidth]{r_relic_4300.png}
+%	\caption{Posterior PDF of likely location of relic based on the
+%    outgoing and incoming scenario. (Explain the colors and what the
+%	errorbars are.)}
+%\end{figure}
 
 \subsection{Effects of applied prior on parameters}
 \input{3.3_sens_analysis}
@@ -257,4 +257,5 @@ of the merger scenario.
 
 \bsp 
 \label{lastpage} 
+
 \end{document}
