--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -1,7 +1,7 @@
 % this line is included when individual section needs to be compiled and
 % reviewed  
-\input{style}
-\begin{document}
+%\input{style}
+%\begin{document}
 
 \label{sec: positionprior}
 % draft: 
@@ -70,33 +70,34 @@ comparable to the merger speed of the two subclusters in the center of mass
 frame.  While \citet{Paul2011b} reports the shock speed decreases only
 slightly as it propagates away from the center of mass, the Bullet shock
 speed mildly drops by only $\sim 14\%$ in the 300~\mega yr period after the
-formation of the Bullet shock versus a $\sim65\%$ drop for the main subcluster, which was slowed down by gravity. 
-
-We approximated the upper and lower bounds of the shock speed with the
-simulated speeds of the subclusters.  We simplified the calculation by
-working in the center of mass frame where the shock speed drops only
-slightly with time. We estimated the upper and lower bounds of the
+formation of the Bullet shock versus a $\sim65\%$ drop for the main
+subcluster, which was slowed down by gravity. \par 
+We approximated the upper and lower bounds of the NW relic speed with the
+simulated speeds of the NW subcluster.  We simplified the calculation by
+working in the center of mass frame where the shock speed is expected to
+drop only slightly with time. We estimated the upper and lower bounds of the
 time-averaged velocity ($\langle v_{relic} \rangle$) of the shock between
 the collision of the subclusters and the observed time as:  
 \begin{equation}
 	\frac{(v_{3D}(t_{obs}) + v_{3D}(t_{col}))}{2}	< \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
 \end{equation}
-The lower bound is set to be the average speed of the subcluster since the
+The lower bound is set to be the average speed of the NW subcluster since the
 relic is observed to have traveled further away than the NW subcluster from
-the center of mass. The upper bound can be approximated as the relative
-collision speed of the subclusters due to how the shock is powered by the
-collision. This is consistent with the fact that shock is a pressure wave
+the center of mass. The upper bound can be approximated as the collisional
+speed of the NW subclusters due to how the shock is powered by the
+collision. We base this physical picture on the fact that shock is a pressure wave
 and does not experience gravitational deceleration while some dissipative
-processes may have slowed down the shock wave. It is unlikely that there
-would be significant energy injected into the shock to speed up the shock .
+processes may have slowed down the shock wave slightly. It is unlikely that there
+would be significant energy injected into the shock to speed up the shock
+such that the shock travels much faster than the collision speed of the
+subcluster.
 \begin{equation}
-	s_{proj} = \langle v_{relic} \rangle (t_{obs} - t_{col}) \cos(\hat{\alpha})
+	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
 \end{equation}
 where $s_{proj}$ is the bound projected separation. 
 We compare the bounds with the observed position of the NW relic from
-\citet{L13}. We summarized the most extreme values from all of the realizations
-for the two possible scenarios in Figure (X), while we leave detailed
-results in Appendix \ref{app: merger_scenarios}.
+\citet{L13}. 
+
 
 %Observationally, studies from Lindner et al. also provide some
 %comparison of the estimated shock speed relative to the gas medium as $4300
@@ -147,8 +148,7 @@ results in Appendix \ref{app: merger_scenarios}.
 %The greatest uncertainty remains in the modeling of the time evolution of
 %the speed of the shock wave.
 \par      
+%\bibliographystyle{mn2e}
+%\bibliography{bib}
 %
-\bibliographystyle{mn2e}
-\bibliography{bib}
-
-\end{document}
+%\end{document}
